Fix running of tests